remove another deprecated URL call